--- a/ClassifierDemo/Info.plist
+++ b/ClassifierDemo/Info.plist
@@ -62,5 +62,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleDisplayName</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app wants to use your photos.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app wants to take pictures.</string>
 </dict>
 </plist>
